[tool.poetry]
name = "kydns"
version = "0.1.4"
description = "A user-friendly DNS client and packet analyzer"
authors = ["EliaOnceAgain <eabunassar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
